# newlib-pados

libgloss/: configure.ac
libgloss/pados/: Makefile.am  pados.specs  pthread.c
newlib/: configure.host
newlib/libc/: acinclude.m4
newlib/libc/include/sys/: config.h  features.h  stat.h
newlib/libc/sys/: Makefile.inc
newlib/libc/sys/pados/: Makefile.inc  chdir.c  chmod.c  clock_getcpuclockid.c  clock_getres.c  clock_gettime.c  clock_setres.c  clock_settime.c  close.c  crt0.c  dup.c  dup2.c  execve.c  exit.c  fchmod.c  fchmodat.c  fcntl.c  fork.c  fstat.c  ftruncate.c  futimens.c  getcwd.c  getdents.c  getentropy.c  getpid.c  gettimeofday.c  isatty.c  kill.c  link.c  lseek.c  lstat.c  mkdir.c  nanosleep.c  open.c  openat.c  pread.c  pwrite.c  read.c  readlink.c  readlinkat.c  (+32 more)
newlib/libc/sys/pados/include/: pthread.h  semaphore.h
newlib/libc/sys/pados/include/PadOS/: BootMode.h
newlib/libc/sys/pados/include/machine/: _types.h
newlib/libc/sys/pados/sys/: _pthreadtypes.h  dirent.h  pados_error_codes.h  pados_mutex.h  pados_syscalls.h  pados_threads.h  pados_timeutils.h  pados_types.h  syslimits.h  uio.h
